--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,6 @@ ENV/
 
 # Additional stuff beyond github's .gitignore
 bower_components/
+
+# configuration file overriding defaults
+config_local.py
