--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 click==6.6
 Flask==0.11.1
+Flask-Assets==0.12
 Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
 httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
+jsmin==2.2.1
 MarkupSafe==0.23
 MySQL-python==1.2.5
 oauth2client==3.0.0
@@ -13,4 +15,5 @@ pyasn1-modules==0.0.8
 rsa==3.4.2
 six==1.10.0
 SQLAlchemy==1.0.15
+webassets==0.12.0
 Werkzeug==0.11.11
