Refactor application startup files
  - Move application startup where it belongs: featuretrak/__init__.py
  - Use a configuration file based on the Flask recommended approach
    (instance/*.py)
  - Change database.py to models.py and leave only SQLAlchemy models
    definition there

--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,5 @@ ENV/
 # Additional stuff beyond github's .gitignore
 bower_components/
 
-# configuration file overriding defaults
-config_local.py
-
+# webassets generated js
 featuretrak/static/gen/
