Prepare for AWS deployment (app.py -> application.py)

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,8 @@ bower_components/
 
 # webassets generated js
 featuretrak/static/gen/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
