--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 services:
   - mysql
+addons:
+  firefox: "47.0.1"
 before_script:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS featuretrak_test CHARACTER SET utf8 COLLATE utf8_general_ci'
 language: python
 python:
   - "2.7"
-install: "pip install -r requirements.txt"
-script: python api_tests.py
+install: "pip install -r dev_requirements.txt"
+script:
+  - "python api_tests.py"
+  - "python create_initial_data.py"
+  - "python gui_tests.py"
