--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ addons:
   firefox: "47.0.1"
 before_script:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS featuretrak_test CHARACTER SET utf8 COLLATE utf8_general_ci'
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
 language: python
 python:
   - "2.7"
@@ -12,5 +15,4 @@ script:
   - "python api_tests.py"
   - "python create_initial_data.py"
   - "python application.py &"
-  - "sleep 2"
   - "python gui_tests.py"
