--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
+sudo: required
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 services:
   - mysql
-addons:
-  firefox: "47.0.1"
 before_script:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS featuretrak_test CHARACTER SET utf8 COLLATE utf8_general_ci'
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
+  - sudo wget https://chromedriver.storage.googleapis.com/2.24/chromedriver_linux64.zip -P /usr/local/bin
 language: python
 python:
   - "2.7"
