--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,15 @@ addons:
     sources:
       - google-chrome
     packages:
+      - mysql-server-5.6
+      - mysql-client-core-5.6
+      - mysql-client-5.6
       - google-chrome-stable
 services:
   - mysql
 before_script:
-  - mysql -e 'CREATE DATABASE IF NOT EXISTS featuretrak_test CHARACTER SET utf8 COLLATE utf8_general_ci'
+  - mysql -u root -e 'CREATE DATABASE IF NOT EXISTS featuretrak_test CHARACTER SET utf8 COLLATE utf8_general_ci'
+  - mysql -u root -e "GRANT ALL PRIVILEGES ON featuretrak_test.* To 'travis'@'localhost' IDENTIFIED BY ''"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
